<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/create"
            android:padding="8dp"
            android:textColor="@color/lavender"
            android:layout_marginStart="120dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_clear_24"
            android:layout_marginStart="110sp"
            android:layout_marginTop="8dp"
            android:id="@+id/cancelButton"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLimitationChet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconLimitationChet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_vertical_align_bottom_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutLimitationChet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limitation_chet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLimitationNechet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconLimitationNechet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_vertical_align_bottom_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutLimitationNechet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limitation_nechet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLoweringChet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconLoweringChet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_vertical_align_top_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutLoweringChet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowering_chet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLoweringNechet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconLoweringNechet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_vertical_align_top_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutLoweringNechet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowering_nechet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBrakingChet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconBrakingChet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_vertical_align_center_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutBrakingChet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/braking_chet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBrakingNechet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconBrakingNechet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_vertical_align_center_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutBrakingNechet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/braking_nechet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNeutral_InsertChet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconNeutral_InsertChet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_format_overline_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutNeutral_InsertChet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neutral_insert_chet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNeutral_InsertNechet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconNeutral_InsertNechet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_format_overline_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutNeutral_InsertNechet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neutral_insert_nechet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCustom_FieldChet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconCustom_FieldChet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_text_fields_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutCustom_FieldChet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_field_chet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCustom_FieldNechet"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iconCustom_FieldNechet"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/baseline_text_fields_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layoutCustom_FieldNechet"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_field_nechet"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="19sp" />

    </LinearLayout>

</LinearLayout>


<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:orientation="vertical"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:background="@drawable/dialogbkg">-->

<!--<LinearLayout-->
<!--    android:id="@+id/linearLayout2"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:orientation="horizontal"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    tools:ignore="UseCompoundDrawables">-->

<!--    <TextView-->
<!--        android:id="@+id/createText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="120dp"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:padding="8dp"-->
<!--        android:text="@string/create"-->
<!--        android:textAlignment="viewStart"-->
<!--        android:textColor="@color/lavender"-->
<!--        android:textSize="25sp" />-->

<!--    <ImageView-->
<!--        android:id="@+id/cancelButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="110sp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:src="@drawable/baseline_clear_24"-->
<!--        tools:ignore="ContentDescription" />-->

<!--</LinearLayout>-->

<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    android:id="@+id/linearLayoutLimitationChet"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginTop="10dp"-->
<!--    android:orientation="horizontal"-->
<!--    android:padding="10dp"-->
<!--    android:visibility="visible"-->
<!--    app:layout_constraintEnd_toEndOf="@+id/linearLayout2"-->
<!--    app:layout_constraintStart_toStartOf="@+id/linearLayout2"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"-->
<!--    tools:ignore="UseCompoundDrawables">-->

<!--    <ImageView-->
<!--        android:id="@+id/iconLimitationChet"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_marginStart="50dp"-->
<!--        android:src="@drawable/baseline_vertical_align_bottom_24"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:ignore="ContentDescription" />-->

<!--    <TextView-->
<!--        android:id="@+id/layoutLimitationChet"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:text="@string/limitation_chet"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/iconLimitationChet"-->
<!--        app:layout_constraintStart_toEndOf="@+id/iconLimitationChet"-->
<!--        app:layout_constraintTop_toTopOf="@+id/iconLimitationChet" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    android:id="@+id/linearLayoutLimitationNechet"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginTop="10dp"-->
<!--    android:orientation="horizontal"-->
<!--    android:padding="10dp"-->
<!--    android:visibility="visible"-->
<!--    app:layout_constraintEnd_toEndOf="@+id/linearLayoutLimitationChet"-->
<!--    app:layout_constraintStart_toStartOf="@+id/linearLayoutLimitationChet"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/linearLayoutLimitationChet"-->
<!--    tools:ignore="UseCompoundDrawables">-->

<!--    <ImageView-->
<!--        android:id="@+id/iconLimitationNechet"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_marginStart="50dp"-->
<!--        android:src="@drawable/baseline_vertical_align_bottom_24"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:ignore="ContentDescription" />-->

<!--    <TextView-->
<!--        android:id="@+id/layoutLimitationNechet"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:text="@string/limitation_nechet"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/iconLimitationNechet"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->